--- a/front-end/secao-01-intro-front-end-js-assincrono/dia-02/ex-01/package.json
+++ b/front-end/secao-01-intro-front-end-js-assincrono/dia-02/ex-01/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite --open"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "vite": "^4.0.4"
+  }
 }
