--- a/dia-03/ex-pos-aula-02/docker-compose.yaml
+++ b/dia-03/ex-pos-aula-02/docker-compose.yaml
@@ -5,3 +5,15 @@ services:
     ports: 
       - 2368:2368
     restart: always
+    environment:
+      - database__client=mysql
+      - database__connection__host=db
+      - database__connection__user=root
+      - database__connection__password=password
+      - database__connection__database=ghost
+    depends_on:
+      - "db"
+  db:
+    image: mysql:5.7.40
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
