--- a/dia-04/ex-middleware-01/package.json
+++ b/dia-04/ex-middleware-01/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "4.17.1"
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "nodemon": "2.0.15"
