--- a/dia-05/trybecash-api/package.json
+++ b/dia-05/trybecash-api/package.json
@@ -2,14 +2,24 @@
   "name": "trybecash-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev": "nodemon .",
+    "test": "mocha tests/**/*$NAME*.test.js --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "2.0.15"
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "nodemon": "2.0.15",
+    "sinon": "^14.0.0"
+  },
+  "dependencies": {
+    "express": "4.17.1",
+    "mysql2": "2.3.3"
   }
 }
