--- a/dia-05/trybecash-api/docker-compose.yaml
+++ b/dia-05/trybecash-api/docker-compose.yaml
@@ -13,6 +13,13 @@ services:
       - 3000:3000
     depends_on:
         - "database"
+    environment:
+      - MYSQL_HOST=database
+      - MYSQL_PORT=3306
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=my_secret_password 
+    env_file:
+      - .env
 
   database:
     image: mysql:8.0.29
