--- a/dia-01/ex-pos-aula-01/package.json
+++ b/dia-01/ex-pos-aula-01/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "express": "4.17.1",
     "mysql2": "2.1.0",
+    "nodemon": "^2.0.22",
     "sequelize": "6.3.4"
   },
   "devDependencies": {
